--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,42 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Quote Generator</title>
-  <style>
-    body { font-family: system-ui, Arial, sans-serif; line-height: 1.5; padding: 1.25rem; }
-    #quoteDisplay p { font-size: 1.15rem; margin: 0.25rem 0; }
-    #quoteDisplay span { opacity: 0.75; }
-    .row { display: flex; gap: .5rem; flex-wrap: wrap; margin: .75rem 0; }
-    input[type="text"] { padding: .5rem; min-width: 240px; }
-    button { padding: .5rem .75rem; cursor: pointer; }
-    .muted { opacity: .7; font-size: .9rem; }
-  </style>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <div id="quoteDisplay" class="muted">Click “Show New Quote” to begin.</div>
-  <div class="row">
-    <button id="newQuote">Show New Quote</button>
-  </div>
+  <!-- Category Filter -->
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Populated dynamically by JS -->
+  </select>
 
-  <!-- Static add-quote inputs (Step 3 from previous task) -->
-  <div class="row">
+  <!-- Quote Display -->
+  <div id="quoteDisplay" style="margin:20px 0; font-size:18px; font-style:italic;"></div>
+  <button id="newQuote">Show New Quote</button>
+
+  <!-- Add Quote Form -->
+  <h2>Add a New Quote</h2>
+  <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- JSON Export / Import controls -->
-  <div class="row">
-    <button id="exportJsonBtn" onclick="exportToJsonFile()">Export Quotes (JSON)</button>
-    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  </div>
+  <!-- Import / Export -->
+  <h2>Manage Quotes</h2>
+  <button onclick="exportToJsonFile()">Export Quotes (JSON)</button>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 
-  <p class="muted" id="status"></p>
-
+  <!-- Link to JS -->
   <script src="script.js"></script>
 </body>
 </html>
