--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Quote Generator</title>
-  </head>
-  <body>
-    <h1>Dynamic Quote Generator</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Quote Generator</title>
+</head>
+<body>
+  <h1>Dynamic Quote Generator</h1>
 
-    <!-- Random Quote -->
-    <div id="quoteDisplay"></div>
-    <button onclick="showRandomQuote()">Show Random Quote</button>
+  <!-- Category Filter -->
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Populated dynamically by JS -->
+  </select>
 
-    <!-- Add Quote Form -->
-    <div id="addQuoteForm"></div>
+  <!-- Quote Display -->
+  <div id="quoteDisplay" style="margin:20px 0; font-size:18px; font-style:italic;"></div>
+  <button id="newQuote">Show New Quote</button>
 
-    <!-- Category Filter -->
-    <select id="categoryFilter" onchange="filterQuotes()">
-      <option value="all">All Categories</option>
-    </select>
+  <!-- Add Quote Form -->
+  <h2>Add a New Quote</h2>
+  <div>
+    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+    <button onclick="addQuote()">Add Quote</button>
+  </div>
 
-    <!-- Import / Export JSON -->
-    <div style="margin-top:10px;">
-      <button onclick="exportToJsonFile()">Export Quotes</button>
-      <input type="file" id="importFile" accept=".json"
-        onchange="importFromJsonFile(event)" />
-    </div>
+  <!-- Import / Export -->
+  <h2>Manage Quotes</h2>
+  <button onclick="exportToJsonFile()">Export Quotes (JSON)</button>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 
-    <!-- Sync Status Notification -->
-    <div id="syncStatus"
-      style="margin-top:10px; color:green; font-weight:bold;"></div>
-
-    <script src="script.js"></script>
-  </body>
+  <!-- Link to JS -->
+  <script src="script.js"></script>
+</body>
 </html>
